--- a/styles.css
+++ b/styles.css
@@ -23,28 +23,69 @@ a img{border:0px;}
 }
 
 #container{
-	width: 900px;  
+	/* width: 900px;   */
 	margin: 0 auto;
 	background-color: #ffffff;
 	overflow: auto;
 	padding-bottom: 50px;
 }
 
+#sidebar {
+	width: 250px;
+	float: left;
+	padding: 20px;
+	text-align: center;
+	background-color: #f9f9f9;
+	/* border-right: 1px solid #ddd; */
+}
+#sidebar img {
+	border-radius: 50%;
+	width: 230px;
+	height: 230px;
+	margin-top: 80px;
+	margin-bottom: 30px;
+	object-fit: cover; /* Ensures the image fills the area */
+}
+#sidebar .bio {
+	font-size: 14px;
+	margin: 10px 0;
+}
+#sidebar .contact-info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#sidebar .contact-info a {
+	color: #333;
+	display: flex;
+	align-items: center;
+	font-size: 13px;
+	text-decoration: none;
+	margin: 5px 0;
+}
+#sidebar .contact-info i {
+	font-size: 18px;
+	margin-right: 8px;
+}
+#sidebar .contact-info a:hover {
+	color: tomato;
+}
 /****************************************************/
 /* HEADER */
 /****************************************************/
 
 #header{
-	width: 820px;  /* because the header has padding on each side */
+	/* width: 820px;  */
 	height: 115px;
 	background-color: #ffffff;
 	opacity: 0.85;
 	padding: 0px 40px;
 	position: fixed;
 	top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
 	text-align: center;
+	margin-left: 290px;
 }
 
 #header #name{
@@ -117,6 +158,23 @@ a img{border:0px;}
 			  font: 16px/32px 'Georgia', monospace;}
 #art .content img{float: middle; margin-right: 0px; opacity: 0.8; border: 0px solid #edeada;}
 
+/****************************************************/
+/* exp SECTION */
+/****************************************************/
+
+#experience{margin:0px 80px; padding-top:150px;}
+#experience .content{overflow: auto; text-align: center;
+			  font: 16px/32px 'Georgia', monospace;}
+#experience .content img{float: middle; margin-right: 0px; opacity: 0.8; border: 0px solid #edeada;}
+
+/****************************************************/
+/* education SECTION */
+/****************************************************/
+
+#education{margin:0px 80px; padding-top:150px;}
+#education .content{overflow: auto; text-align: center;
+			  font: 16px/32px 'Georgia', monospace;}
+#education .content img{float: middle; margin-right: 0px; opacity: 0.8; border: 0px solid #edeada;}
 
 /****************************************************/
 /* contact SECTION */
