--- a/styles1.css
+++ b/styles1.css
@@ -38,7 +38,7 @@ a img{border:0px;}
 }
 
 .header{
-	background-color: #ffffff;
+	background-color: #8aaae538;
 	padding: 0px 10px;
 	position: fixed;
 	top: 0;
@@ -46,12 +46,14 @@ a img{border:0px;}
 	text-align: center;
 	display: flex;
 	justify-content: space-between;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #8aaae538;
+	margin-left: 290px;
 }
 
 .insidecontainer{
     margin: 10px;
     margin-top: 120px;
+	margin-left: 250px;
 }
 
 .content{
@@ -64,13 +66,17 @@ a img{border:0px;}
 }
 
 .sidebar {
+	position: fixed;
+    height: 100%;
+    overflow-x: hidden;
+    padding-top: 20px;
 	width: 250px;
 	/* float: left; */
-    height: 100%;
+    /* height: 100%; */
 	padding: 20px;
 	text-align: center;
-	background-color: #f9f9f9;
-	border-right: 1px solid #ddd;
+	background-color: #8aaae5a1;
+	border-right: 1px solid #8aaae5a1;
 }
 .sidebar img {
 	border-radius: 50%;
@@ -131,7 +137,7 @@ a img{border:0px;}
 
 #about{margin: 0px 76px; padding-top: 50px;}
 #about .content{overflow: auto;
-	margin-top: 115px;
+	/* margin-top: 60px; */
 	font: 16px/32px 'Georgia', monospace;}
 
 
